--- a/app/assets/components/ui-elements/oj-annotation.html
+++ b/app/assets/components/ui-elements/oj-annotation.html
@@ -231,38 +231,15 @@
       },
 
       scrollAnnotationIntoView: function(prioritize_top) {
-        if (!this.annotation.open)
-          return;
-
-        var list = this.offsetParent;
-        if (list.tagName != 'OJ-ANNOTATION-LIST')
-          console.error('annotation parent is not the oj-annotation-list');
-        var container = list.offsetParent;
-        if (container.id != 'scroller')
-          console.error('annotation-list parent is not the #scroller');
-
-        var spacing = 10; /*px*/
-        var top = this.offsetTop;
-        var height = this.offsetHeight;
-        top = top + list.offsetTop;
-
-        var newTop;
-        if (prioritize_top && top < container.scrollTop) {
-          newTop = top - spacing;
-
-        } else if (top + height > container.scrollTop + container.offsetHeight) {
-          newTop = top + height + spacing - container.offsetHeight;
-          if (prioritize_top && top < newTop)
-            newTop = top;
-
-        } else if (!prioritize_top && top < container.scrollTop) {
-          newTop = top - spacing;
-
+        if (this.annotation.open) {
+            this.fire('annotation-scroll-into-view',
+                        {
+                          element:        this,
+                          annotation:     this.annotation,
+                          prioritize_top: prioritize_top
+                        }
+                     );
         }
-
-        if (newTop)
-            if (Math.abs(newTop-container.scrollTop) > 5) // Avoid irritating small changes
-                $(container).animate({ scrollTop: newTop }, 500);
       },
 
       /***********************/
@@ -302,7 +279,7 @@
         this.scrollAnnotationIntoView(true);
       },
 
-      newResponseShown: function(event) {
+        newResponseShown: function(event) {
         this.scrollAnnotationIntoView(false);
       },
 
