--- a/app/assets/components/ui-elements/oj-review-paper-info.html
+++ b/app/assets/components/ui-elements/oj-review-paper-info.html
@@ -10,7 +10,10 @@
                                noink no-animations no-label-float
                                vertical-align=bottom
                                horizontal-align=left>
-              <paper-listbox id="versionMenu" class="dropdown-content dropdown" attr-for-selected="version" selected="{{paper.typed_provider_id}}">
+              <paper-listbox id="versionMenu"
+                             class="dropdown-content dropdown"
+                             attr-for-selected="version"
+                             selected="[[paper.typed_provider_id]]">
                   <template is="dom-repeat" items="{{paper.versions}}" as="version">
                       <paper-item version="{{version.typed_provider_id}}">{{providerPart(version.typed_provider_id)}}</paper-item>
                   </template>
@@ -30,6 +33,9 @@
           <oj-assigned-users-list paper="{{paper}}" user="{{user}}"></oj-assigned-users-list>
 
           <template is="dom-if" if="{{showBottomDetails(paper, paper.state, paper.can_view_annotations)}}">
+
+              <div class="separator"></div>
+
               <div class="block-row">
 
                   <div class="block-item status">
@@ -105,6 +111,9 @@
               min-height:   0;
               padding:      2px 4px;
           }
+          paper-item:hover {
+              background:   #dddddd;
+          }
 
           #version {
               margin-bottom:  20px;
@@ -127,13 +136,14 @@
               font-family: Roboto;
               font-size:   17px;/* Approximation due to font substitution */
               font-style:  italic;
+              margin-top:  8px;
               /*line-height: 22px;/* Approximation due to font substitution */
               max-height:  44px;
               overflow-y:  scroll;
           }
 
           .block-row {
-              margin-top: 32px;
+              margin-top: 24px;
               @apply(--layout-horizontal);
           }
 
@@ -143,7 +153,7 @@
           }
 
           .block-item .label {
-              font-size: 12px;
+              font-size:   12px;
               font-weight: 700;
           }
           .block-item .text {
@@ -159,11 +169,19 @@
           .block-item.count .text {
               font-size:    48px;
               float:        left;
-              margin:       -16px 4px 0 0;
+              margin:       -8px 4px 0 0;
           }
 
           oj-assigned-users-list {
               margin-top:  24px;
+          }
+
+          .separator {
+              margin:              12px 0;
+              box-sizing:          border-box;
+              border-top:          1px solid #a0a0a0;
+              height:              0;
+              width:               100%;
           }
 
       </style>
