Fix menu focusing

--- a/app/assets/components/polymer-components.html
+++ b/app/assets/components/polymer-components.html
@@ -33,6 +33,7 @@
  *= require paper-listbox/paper-listbox
  *= require paper-checkbox/paper-checkbox
  *= require paper-input/paper-input
+ *= require paper-menu/paper-menu
  *= require paper-menu-button/paper-menu-button
  *= require paper-menu-button/paper-menu-button-animations
  *= require paper-header-panel/paper-header-panel
