--- a/app/assets/components/ui-elements/oj-toolbar.html
+++ b/app/assets/components/ui-elements/oj-toolbar.html
@@ -76,8 +76,8 @@
         <div class="toolbar disable-selection">
             <paper-icon-button icon="icons:menu" on-tap="toggleDrawer" hidden$="{{!narrow}}"></paper-icon-button>
             <span class="title">The Open Journal</span>
-            <input id="search" is="iron-input" placeholder="Search" on-keyup="onSearchKeyUp">
-            <iron-icon id="search-icon" icon="icons:search"></iron-icon>
+            <!-- <input id="search" is="iron-input" placeholder="Search" on-keyup="onSearchKeyUp"> -->
+            <!-- <iron-icon id="search-icon" icon="icons:search"></iron-icon> -->
             <oj-user-login current-user="{{currentUser}}"></oj-user-login>
         </div>
 
