--- a/app/assets/components/ui-elements/oj-toolbar.html
+++ b/app/assets/components/ui-elements/oj-toolbar.html
@@ -30,8 +30,10 @@
               @apply(--layout-flex);
               font-family: Neuton;
               color:       #ffffff;
-              font-size:   45px;/
+              font-size:   39px;
+              line-height: 60px;
               font-weight: 400;
+
           }
 
           #search {
