Tightening up review page styles

--- a/app/assets/components/subpages/oj-papers-page.html
+++ b/app/assets/components/subpages/oj-papers-page.html
@@ -49,6 +49,12 @@
             #top {
                 background: #eee;
                 padding: 0 30px;
+                font-family: Neuton;
+                color: #192023;
+                font-size: 18px; /* Approximation due to font substitution */
+                font-weight: 700;
+                line-height: 30px; /* Approximation due to font substitution */
+                text-align: left;
             }
 
             #list {
