Aligning actions element

--- a/app/assets/components/subpages/oj-review-page.html
+++ b/app/assets/components/subpages/oj-review-page.html
@@ -179,6 +179,7 @@
           right:        0;
           width:        var(--panel-width);
           z-index:      1100;
+          margin-right: 32px;
       }
 
       oj-review-paper-info {
