--- a/app/assets/components/ui-elements/oj-review-page-actions.html
+++ b/app/assets/components/ui-elements/oj-review-page-actions.html
@@ -66,10 +66,10 @@
 
         <template is="dom-if" if="{{canCheckForUpdate(paper, paper.state)}}">
           <paper-button id="check-for-update"
-                        class="grey"
+                        class="grey tall"
                         on-tap="checkForUpdateClick" >
               <iron-icon icon="icons:refresh"></iron-icon>
-              Check for Update
+              Check for updated paper on arXiv
           </paper-button>
         </template>
 
@@ -179,12 +179,18 @@
               height:        80px;
               font-family:   Roboto;
               color:         #54d1b8;
-              font-size:     30px;/* Approximation due to font substitution */
+              font-size:     24px;/* Approximation due to font substitution */
               font-weight:   500;
               text-align:    center;
               padding-top:   24px;
-              margin:        20px 0 20px 0;
+              padding-bottom: 24px;
+              margin:        30px 0 30px 0;
           }
+
+          paper-button.tall {
+            height: 110px;
+          }
+
           paper-button.grey iron-icon {
               width:         30px !important;
               height:        30px !important;
@@ -195,7 +201,7 @@
           }
           paper-button.grey:not([disabled]):hover, paper-button.grey:not([disabled]):active {
               color:       #44a995 ! important;
-              border:      none;
+              border:      solid 3px #ffffff;
               background:  #f8f8f8;
           }
           paper-button.grey[disabled] {
