--- a/app/assets/components/ui-elements/oj-review-paper-info.html
+++ b/app/assets/components/ui-elements/oj-review-paper-info.html
@@ -143,6 +143,7 @@
           .block-row {
               margin-top: 24px;
               @apply(--layout-horizontal);
+              font-family: Roboto;
           }
 
           .block-item {
