--- a/app/assets/components/ui-elements/oj-user-lookup.html
+++ b/app/assets/components/ui-elements/oj-user-lookup.html
@@ -23,12 +23,15 @@
 
           input {
               padding:        0 4px;
+              margin-top:     10px;
               vertical-align: top;
-              font-family:    Neuton;
+              display:  block;
+              width: 100%;
+              font-family:    Roboto;
               color:          #192023;
-              font-size:      32px;/* Approximation due to font substitution */
-              font-weight:    700;
-              border:         2px inset ThreeDLightShadow;
+              font-size:      20px;/* Approximation due to font substitution */
+              line-height:    40px;
+              font-weight:    400;
           }
           input::-webkit-input-placeholder {
               color:        #439982;
