--- a/app/assets/components/ui-elements/oj-user-tag.html
+++ b/app/assets/components/ui-elements/oj-user-tag.html
@@ -57,6 +57,7 @@
           }
 
           #completion-text {
+              font-family: Roboto;
               display:     inline-block;
               color:       #7d7d7d;
               font-weight: 400;
