More detailed tooltips

--- a/app/assets/components/subpages/oj-review-page.html
+++ b/app/assets/components/subpages/oj-review-page.html
@@ -24,6 +24,8 @@
                 <div id="rhs-tabs" hidden$="{{!paper.can_view_annotations}}">
                     <div id="tab-info"  class$="{{tabClass('info',  activePane)}}" title="Info"  on-tap="tabTap"></div>
                     <div id="tab-edits" class$="{{tabClass('edits', activePane)}}" title="Edits" on-tap="tabTap"></div>
+                    <div id="tab-info"  class$="{{tabClass('info',  activePane)}}" title="Paper Information"  on-tap="tabTap"></div>
+                    <div id="tab-edits" class$="{{tabClass('edits', activePane)}}" title="Paper Comments" on-tap="tabTap"></div>
                 </div>
 
                 <div id="panes">
