--- a/app/assets/components/ui-elements/oj-annotation.html
+++ b/app/assets/components/ui-elements/oj-annotation.html
@@ -114,7 +114,7 @@
               font-family: Neuton;
               color:         #192023;
               font-size:     20px;/* Approximation due to font substitution */
-              font-weight:   700;
+              font-weight:   400;
               line-height:   30px;
               @apply(--ellipses);
           }
@@ -128,7 +128,8 @@
               white-space:   nowrap;
           }
           .header .count {
-              font-size:     0.7em;
+              font-family: Roboto;
+              font-size:     14px;
               text-align:    right;
               margin-left:   6px;
               margin-right:  6px;
@@ -137,6 +138,7 @@
           }
           .header oj-reviewer-annotation-controls {
               margin-bottom: 4px;
+              font-family: Roboto;
           }
 
           .issue {
@@ -144,17 +146,17 @@
               color:       black;
               font-size:   14px;/* Approximation due to font substitution */
               font-weight: 400;
-
               min-height:  25px;
           }
 
           .actions {
               line-height:     18px;
           }
+
           .action {
-              text-decoration: underline;
-              font-size:       12px;
-              color:           #888;
+              text-decoration: none !important;
+              font-size:       14px;
+              color:           #54d1b8;
               font-variant:    small-caps;
               margin-right:    4px;
               margin-left:     4px;
