--- a/app/assets/components/ui-elements/oj-reviewer-annotation-controls.html
+++ b/app/assets/components/ui-elements/oj-reviewer-annotation-controls.html
@@ -19,15 +19,21 @@
       <style>
 
           :host{
-              font-size:       12px;
+              font-size:       14px;
               color:           #888;
               font-variant:    small-caps;
           }
 
           .action {
-              text-decoration: underline;
+              text-decoration: none;
+              color: #54d1b8;
               margin-right:    4px;
               margin-left:     4px;
+          }
+
+          .action:hover{
+            color: #44a995;
+            text-decoration: underline;
           }
 
           .state {
