--- a/app/assets/components/ui-elements/markdown-content.html
+++ b/app/assets/components/ui-elements/markdown-content.html
@@ -12,7 +12,7 @@
               margin:  0;
           }
           #renderedContent {
-              padding: 0;
+              padding: 5px 0 5px 0px;
           }
           p, h1, h2, h3, h4, h5, h6, ul, ol {
               margin-top: 0;
