--- a/app/assets/components/ui-elements/oj-annotation.html
+++ b/app/assets/components/ui-elements/oj-annotation.html
@@ -94,12 +94,12 @@
               padding:          2px;
           }
           .open .container-inner, .transitioning .container-inner {
-              box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+              /*box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);*/
           }
 
 
           iron-collapse {
-              background-color: #f7f7f7;
+              /*background-color: #f7f7f7;*/
           }
 
           .header {
@@ -107,7 +107,7 @@
               @apply(--layout-end);
           }
           .open .header, .transitioning .header {
-              background: #f7f7f7;
+              /*background: #f7f7f7;*/
           }
 
           .header .text {
