--- a/app/assets/components/ui-elements/oj-user-tag.html
+++ b/app/assets/components/ui-elements/oj-user-tag.html
@@ -27,7 +27,7 @@
               display:       block;
               font-size:     24px;/* Approximation due to font substitution */
               font-weight:   400;
-              line-height:   30px;/* Approximation due to font substitution */
+              line-height:   24px;/* Approximation due to font substitution */
           }
 
           .remover {
@@ -37,8 +37,9 @@
           }
 
           #completion-icon {
-              width:          24px !important;
-              height:         24px !important;
+              width:          20px !important;
+              height:         20px !important;
+              margin-top:     -4px;
               margin-left:    12px;
               background:     #e4e4e4;
               color:          hotpink;
