--- a/app/assets/components/ui-elements/oj-review-paper-info.html
+++ b/app/assets/components/ui-elements/oj-review-paper-info.html
@@ -129,6 +129,7 @@
               font-weight: 700;
               /*line-height: 30px;/* Approximation due to font substitution */
               max-height:  92px;
+              overflow-y:  hidden;
           }
 
           .authors {
@@ -138,6 +139,7 @@
               margin-top:  8px;
               /*line-height: 22px;/* Approximation due to font substitution */
               max-height:  44px;
+              overflow-y:  hidden;
           }
 
           .block-row {
