Underlines for action links

--- a/app/assets/components/ui-elements/oj-reviewer-annotation-controls.html
+++ b/app/assets/components/ui-elements/oj-reviewer-annotation-controls.html
@@ -25,7 +25,7 @@
           }
 
           .action {
-              text-decoration: none;
+              text-decoration: underline;
               color: #54d1b8;
               margin-right:    4px;
               margin-left:     4px;
